--- a/ClassSelectionApp/app/src/main/res/values/strings.xml
+++ b/ClassSelectionApp/app/src/main/res/values/strings.xml
@@ -4,4 +4,41 @@
     <string name="password">Password</string>
     <string name="loginHint">Enter a Username</string>
     <string name="loginButtonText">Login</string>
+    <string name="errMessageLogin">Incorrect Login Name.  Please Retry</string>
+    <string name="errMessagePassword">Incorrect Password.  Please Retry.</string>
+    <string name="FirstName">First Name</string>
+    <string name="LastName">Last Name</string>
+    <string name="Phone">Phone</string>
+    <string name="Birthday">Date of Birth:</string>
+    <string-array name="Month">
+        <item>Jan</item>
+        <item>Feb</item>
+        <item>Mar</item>
+        <item>Apr</item>
+        <item>May</item>
+        <item>June</item>
+        <item>Jul</item>
+        <item>Aug</item>
+        <item>Sep</item>
+        <item>Oct</item>
+        <item>Nov</item>
+        <item>Dec</item>
+    </string-array>
+    <string name="txtDay">Day</string>
+    <string name="txtMonth">Month</string>
+    <string name="txtYear">Year</string>
+    <string name="cert">Certificate</string>
+    <string name="twoYr">Associates Degree</string>
+    <string name="major">Major</string>
+    <string name="btnNext">Next</string>
+    <string-array name="Certificate">
+        <item>Android Certificate</item>
+        <item>iOS Mobile Certificate</item>
+    </string-array>
+    <string-array name="Major">
+        <item>Digital Media</item>
+        <item>Mobile Application Development</item>
+        <item>Web Development</item>
+    </string-array>
+
 </resources>
